[fixes] style for wrap into description

--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -17,7 +17,7 @@ body{
     overflow-y: scroll;
 }
 
-p.description{
+.description > p{
     overflow-wrap: break-word;
 }
 .playing-task{
